@@ -2275,7 +2275,7 @@
       <p>
        <b>STATUS:</b>
          Two verified configurations are available:
-         (1) The basic OS test configuration that verfies the correctnexx port of Nuttx, and (2) an extensive <a href="NuttShell.html">NuttShell (NSH)</a> configuration.
+         (1) The basic OS test configuration that verfies the correctness port of Nuttx, and (2) an extensive <a href="NuttShell.html">NuttShell (NSH)</a> configuration.
          The NSH configuration includes:
          (1) Full network support,
          (2) Verified SPI driver,
